--- a/finalExamRishabh/MainPage.xaml
+++ b/finalExamRishabh/MainPage.xaml
@@ -7,28 +7,22 @@
         <VerticalStackLayout
             Padding="30,0"
             Spacing="25">
-            <Image
-                Source="dotnet_bot.png"
-                HeightRequest="185"
-                Aspect="AspectFit"
-                SemanticProperties.Description="dot net bot in a race car number eight" />
-
             <Label
-                Text="Hello, World!"
+                Text="Rishabh Mishra"
                 Style="{StaticResource Headline}"
                 SemanticProperties.HeadingLevel="Level1" />
 
             <Label
-                Text="Welcome to &#10;.NET Multi-platform App UI"
-                Style="{StaticResource SubHeadline}"
+                Text="Student Number: 991753573"
+                Style="{StaticResource Headline}"
                 SemanticProperties.HeadingLevel="Level2"
                 SemanticProperties.Description="Welcome to dot net Multi platform App U I" />
 
             <Button
-                x:Name="CounterBtn"
-                Text="Click me" 
+                x:Name="provincepagebutton"
+                Text="Go to Provinces Page" 
                 SemanticProperties.Hint="Counts the number of times you click"
-                Clicked="OnCounterClicked"
+                Clicked="OnProvincePage"
                 HorizontalOptions="Fill" />
         </VerticalStackLayout>
     </ScrollView>
